# casino_calculator

./: CMakeLists.txt  main.cpp
src/blackjack/: cards.hpp  dealer_hand.hpp  deck.hpp  hand.hpp  outcome.hpp  player_hand.hpp  rules.hpp  scenario.hpp  score.hpp  shoe.hpp
src/polyfill/: percent.hpp  static_vector.hpp  universal.hpp
